@@ -26,6 +26,8 @@ public class SolrCLITest extends SolrTestCase {
     assertEquals(SolrCLI.normalizeSolrUrl("http://localhost:8983/solr/"), "http://localhost:8983");
     assertEquals(SolrCLI.normalizeSolrUrl("http://localhost:8983/"), "http://localhost:8983");
     assertEquals(SolrCLI.normalizeSolrUrl("http://localhost:8983"), "http://localhost:8983");
+    assertEquals(
+        SolrCLI.normalizeSolrUrl("http://localhost:8983/solr/", false), "http://localhost:8983");
   }
 
   @Test
